// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentsList /> renders a list of comments 1`] = `
<div
  className="CommentsList"
>
  <VelocityTransitionGroup
    enter={null}
    enterHideStyle={
      Object {
        "display": "none",
      }
    }
    enterShowStyle={
      Object {
        "display": "",
      }
    }
    leave={
      Object {
        "animation": "fadeOut",
        "duration": 500,
      }
    }
    runOnMount={false}
  >
    <div
      className="Comment"
      key="1"
    >
      <Link
        replace={false}
        to="/comments/fred"
      >
        <img
          alt="fred"
          className="img-responsive center-block"
          src="https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon"
        />
      </Link>
      <h2>
        <Link
          replace={false}
          to="/comments/fred"
        >
          fred
        </Link>
        <small>
           posted in ABC / 
          <Link
            replace={false}
            to={
              Object {
                "pathname": "/artist/abc/album/abc",
                "state": Object {
                  "scrollToComments": true,
                },
              }
            }
          >
            ABC
          </Link>
        </small>
      </h2>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "<time datetime=\\"2018-05-09T04:05:00Z\\" data-local=\\"time-ago\\">May  9, 2018  4:05am</time>",
          }
        }
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>First comment</p>",
          }
        }
      />
    </div>
    <div
      className="Comment"
      key="2"
    >
      <Link
        replace={false}
        to="/comments/joe"
      >
        <img
          alt="joe"
          className="img-responsive center-block"
          src="https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon"
        />
      </Link>
      <h2>
        <Link
          replace={false}
          to="/comments/joe"
        >
          joe
        </Link>
        <small>
           posted in ABC / 
          <Link
            replace={false}
            to={
              Object {
                "pathname": "/artist/abc/album/abc",
                "state": Object {
                  "scrollToComments": true,
                },
              }
            }
          >
            ABC
          </Link>
        </small>
      </h2>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "<time datetime=\\"2018-05-05T05:34:56Z\\" data-local=\\"time-ago\\">May  5, 2018  5:34am</time>",
          }
        }
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Second comment</p>",
          }
        }
      />
    </div>
  </VelocityTransitionGroup>
</div>
`;

exports[`<CommentsList /> renders a list of comments with shortHeader 1`] = `
<div
  className="CommentsList"
>
  <VelocityTransitionGroup
    enter={null}
    enterHideStyle={
      Object {
        "display": "none",
      }
    }
    enterShowStyle={
      Object {
        "display": "",
      }
    }
    leave={
      Object {
        "animation": "fadeOut",
        "duration": 500,
      }
    }
    runOnMount={false}
  >
    <div
      className="Comment"
      key="1"
    >
      <Link
        replace={false}
        to="/comments/fred"
      >
        <img
          alt="fred"
          className="img-responsive center-block"
          src="https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon"
        />
      </Link>
      <h2>
        <Link
          replace={false}
          to="/comments/fred"
        >
          fred
        </Link>
      </h2>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "<time datetime=\\"2018-05-09T04:05:00Z\\" data-local=\\"time-ago\\">May  9, 2018  4:05am</time>",
          }
        }
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>First comment</p>",
          }
        }
      />
    </div>
    <div
      className="Comment"
      key="2"
    >
      <Link
        replace={false}
        to="/comments/joe"
      >
        <img
          alt="joe"
          className="img-responsive center-block"
          src="https://gravatar.com/avatar/88884e5cb90c02031f031bc4760fcf69?s=80&r=pg&d=identicon"
        />
      </Link>
      <h2>
        <Link
          replace={false}
          to="/comments/joe"
        >
          joe
        </Link>
      </h2>
      <h3
        dangerouslySetInnerHTML={
          Object {
            "__html": "<time datetime=\\"2018-05-05T05:34:56Z\\" data-local=\\"time-ago\\">May  5, 2018  5:34am</time>",
          }
        }
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Second comment</p>",
          }
        }
      />
    </div>
  </VelocityTransitionGroup>
</div>
`;
